objects/Custom_Automation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Automations</relationshipLabel>
        <relationshipName>Account_Custom_Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automation_Status__c</fullName>
        <label>Automation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Outcome</fullName>
                    <default>true</default>
                    <label>Waiting on Outcome</label>
                </value>
                <value>
                    <fullName>Evaluating</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automation_Trigger_Date__c</fullName>
        <label>Automation Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Automation_Type_API_Name_External_ID__c</fullName>
        <inlineHelpText>Use the Touchplan API Name for Custom Metadata Types or the assigned External ID for Marketo Email Campaign</inlineHelpText>
        <label>Automation Type API Name/External ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create_Day_40_LBW_Account_Performance</fullName>
                </value>
                <value>
                    <fullName>Create_Monthly_LBW_Account_Performance</fullName>
                </value>
                <value>
                    <fullName>TORCHX_TRAINING_DAY_7</fullName>
                </value>
                <value>
                    <fullName>TORCHX_TRAINING_DAY_27</fullName>
                </value>
                <value>
                    <fullName>TORCHX_MONTHLY_REVIEW_DAY_40</fullName>
                </value>
                <value>
                    <fullName>TORCHX_MONTHLY_REVIEW_EVERY_30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automation_Type__c</fullName>
        <label>Automation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketo_Email_Campaign__c</fullName>
                </value>
                <value>
                    <fullName>Daily_Scheduled_Record_Auto_Create__mdt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancellation Request</label>
        <referenceTo>Cancellation_Request__c</referenceTo>
        <relationshipLabel>Custom Automations</relationshipLabel>
        <relationshipName>Cancellation_Request_Custom_Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_Live_Equivalent_on_Request__c</fullName>
        <inlineHelpText>Days Since Live when a Cancellation Request was created for LBW and the number of days since the CSC was created and the Cancellation Request was created for TORCHx.</inlineHelpText>
        <label>Days Since Live Equivalent on Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Cancellation__c</fullName>
        <label>Days in Cancellation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Automation</label>
    <nameField>
        <displayFormat>AAN-{0000000}</displayFormat>
        <label>Custom Automation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Automation_Status__c</columns>
        <columns>Automation_Trigger_Date__c</columns>
        <columns>Automation_Type__c</columns>
        <columns>Automation_Type_API_Name_External_ID__c</columns>
        <columns>Cancellation_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <columns>Automation_Status__c</columns>
        <columns>Automation_Trigger_Date__c</columns>
        <columns>Automation_Type__c</columns>
        <columns>Automation_Type_API_Name_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Account_Automation_Save_Mode</fullName>
        <active>true</active>
        <label>Account Automation Save Mode</label>
    </recordTypes>
</CustomObject>